--- a/docs/styles.css
+++ b/docs/styles.css
@@ -106,11 +106,6 @@ body {
   z-index: 99;
 }
 
-/* .container {
-  max-width: 900px;
-  margin: 0 auto;
-} */
-
 .header {
   padding: 10px 0px;
 }
@@ -118,7 +113,6 @@ body {
 .header__container {
   display: flex;
   align-items: center;
-  /* justify-content: space-between; */
   background-color: #bf9cd8;
   width: 100%;
   position: relative;
@@ -156,6 +150,7 @@ body {
   grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
   gap: 20px;
   margin-top: 100px;
+  padding: 0 15px;
 }
 
 .banner {
@@ -182,25 +177,20 @@ body {
 
 .banner-title {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   font-size: 22px;
   font-weight: 600;
-  /* margin: 0 16px 0 0; */
-  /* position: relative; */
+  position: relative;
 }
 
 .banner-title__icon {
   width: 20px;
   height: 20px;
-  margin-top: calc(11.5%);
   margin-left: 8px;
-
-  /* text-align: center; */
-  /* margin: 18px 0 0 8px; */
-  /* position: absolute; */
-  /* top: calc(50% - 5px);
-  right: -30px; */
+  top: 50%;
+  left: 100%;
+  transform: translateY(25%);
 }
 
 .banner-age {
@@ -216,6 +206,7 @@ body {
 }
 
 /* Profile Detail */
+
 .detail-page {
   display: none;
   inset: 0;
@@ -223,10 +214,7 @@ body {
   background-color: transparent;
   z-index: 20;
   overflow-y: auto;
-  /* border-radius: 2%; */
   margin-top: 100px;
-
-  /* width: 100%; */
 }
 
 .detail-bio {
@@ -240,20 +228,10 @@ body {
 }
 
 .detail-header {
-  /* display: flex; */
   display: none;
   flex-direction: column;
   align-items: center;
-
-  /* margin-top: 20px; */
   background-color: #bf9cd8;
-  /* border-radius: 5%; */
-  /* background-color: transparent; */
-  /* box-shadow: 3px 6px 6px rgba(0, 0, 0, 0.06); */
-  /* position: fixed; */
-  /* top: 120px;
-  left: 16%; */
-  /* z-index: 8; */
 }
 
 .detailName {
@@ -267,13 +245,10 @@ body {
   margin-right: 22px;
   cursor: pointer;
   color: #05202e;
-  /* box-shadow: 3px 6px 6px rgba(0, 0, 0, 0.06); */
-
   height: 50px;
   max-width: 300px;
   margin: 0 auto;
   padding: 16px;
-  /* display: flex; */
   justify-content: center;
   border-radius: 25px;
   position: absolute;
@@ -281,42 +256,6 @@ body {
   left: 10px;
 }
 
-@media (max-width: 1100px) {
-  .detail-header {
-    left: 10%;
-  }
-}
-
-@media (max-width: 992px) {
-  .detail-header {
-    padding: 5px 16px;
-  }
-
-  .header__container {
-    padding: 15px;
-  }
-
-  .detail-title-name {
-    font-size: 20px;
-  }
-
-  #detailName {
-    font-size: 20px;
-  }
-}
-
-@media (max-width: 766px) {
-  .back-button {
-    top: 50%;
-    left: 5px;
-    padding: 10px;
-    font-size: 16px;
-  }
-
-  .detail-title-name h2 {
-    font-size: 30px;
-  }
-}
 /* .photo-slider { margin: 10px 0; } */
 
 .dot {
@@ -340,25 +279,26 @@ body {
   font-weight: bold;
   margin-bottom: 4px;
   position: absolute;
-  top: 300px;
+  top: 320px;
   color: white;
 }
 
 .detail-title-name {
   display: flex;
-  /* display: none; */
   font-size: 26px;
   font-weight: bold;
   margin-bottom: 4px;
-  /* position: absolute; */
-  /* top: 240px; */
   color: white;
 }
 
 .detail-title__icon {
   width: 21px;
   height: 21px;
-  margin: 22px 0 0 8px;
+  margin-left: 8px;
+  position: absolute;
+  top: 50%;
+  left: 100%;
+  transform: translateY(-20%);
 }
 
 .detail-age {
@@ -468,22 +408,7 @@ body {
 
 .button-pulse {
   a {
-    background-image: linear-gradient(
-      /* #ee1dba */
-        /* 120deg,
-      #7afffb,
-      #79fcff,
-      #75eaff,
-      #6eccff,
-      #67a4ff,
-      #5f73ff,
-      #7156ff,
-      #9b4eff,
-      #c547ff,
-      #e940ff,
-      #ff3cfc,
-      #ff3bf2 */
-    );
+    background-image: linear-gradient();
 
     background-color: #ee1dba;
 
@@ -528,22 +453,6 @@ body {
   margin-top: 20px;
   a {
     background: #ee1dba;
-    /* background-image: linear-gradient(
-      120deg,
-      #7afffb,
-      #79fcff,
-      #75eaff,
-      #6eccff,
-      #67a4ff,
-      #5f73ff,
-      #7156ff,
-      #9b4eff,
-      #c547ff,
-      #e940ff,
-      #ff3cfc,
-      #ff3bf2
-    ); */
-
     width: 100%;
     height: 100%;
     position: absolute;
@@ -717,23 +626,7 @@ body {
   }
 }
 
-/* .banner-img-container__button {
-  position: absolute;
-  top: 20px;
-  right: 10px;
-  display: block;
-  border-radius: 25px;
-  background: #ee1dba;
-  box-shadow: inset 0 0 10px rgba(159, 162, 177, 0.8);
-  -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.25);
-  height: 40px;
-  width: 70px;
-  margin: 0px auto 30px auto;
-} */
-
 .banner-img-container__button-2 {
-  /* background: transparent; */
-  /* color: #fff; */
   border: 1px solid #a947b8;
   border-radius: 50px;
   padding: 0.8rem 2rem;
@@ -757,9 +650,7 @@ body {
   position: absolute;
   bottom: 12px;
   left: 12px;
-  /* background: rgba(0, 0, 0, 0.5); */
   padding: 6px 12px;
-  /* border-radius: 12px; */
   color: #fff;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
 }
@@ -769,19 +660,12 @@ body {
   height: 400px;
   object-fit: cover;
   object-position: center center;
-
   margin-bottom: 5px;
-  /* img {
-    width: 100%;
-  } */
 }
 
 .photo-grid {
-  /* display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 8px; */
   margin-bottom: 10px;
-  padding: 0 45px;
+  padding: 0 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -791,8 +675,9 @@ body {
 
 .grid-photo {
   width: 100%;
+  /* height: auto; */
   aspect-ratio: 1;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: 5px;
   cursor: pointer;
   transition: 0.3s;
@@ -871,11 +756,79 @@ body {
   }
 }
 
-/* #myImg {
-  border-radius: 5px;
-  cursor: pointer;
-  transition: 0.3s;
-  display: block;
-  margin-left: auto;
-  margin-right: auto
-} */
+@media (max-width: 1100px) {
+  .detail-header {
+    left: 10%;
+  }
+
+  .main-detail-img {
+    height: 300px;
+  }
+
+  .detail-title {
+    top: 220px;
+  }
+}
+
+@media (max-width: 992px) {
+  .detail-header {
+    padding: 5px 16px;
+  }
+
+  .header__container {
+    padding: 15px;
+  }
+
+  .main-detail-img {
+    height: 250px;
+  }
+
+  .detail-title {
+    top: 180px;
+  }
+
+  .detail-title-name {
+    font-size: 20px;
+  }
+
+  #detailName {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 766px) {
+  .back-button {
+    top: 50%;
+    left: 5px;
+    padding: 10px;
+    font-size: 16px;
+  }
+
+  .detail-title h2 {
+    font-size: 30px;
+  }
+
+  .detail-title__icon {
+    width: 20px;
+    height: 20px;
+    transform: translateY(-30%);
+  }
+
+  .main-detail-img {
+    height: 200px;
+  }
+
+  .detail-title {
+    top: 140px;
+  }
+}
+
+@media (max-width: 500px) {
+  .main-detail-img {
+    height: 150px;
+  }
+
+  .detail-title {
+    top: 100px;
+  }
+}
