--- a/docs/styles.css
+++ b/docs/styles.css
@@ -15,7 +15,7 @@ body {
   background-color: transparent;
   color: #333;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  /* padding: 16px; */
+  padding-bottom: 30px;
   overflow-x: hidden;
 }
 
@@ -108,7 +108,11 @@ body {
 }
 
 .header {
-  padding: 10px 0px;
+  /* padding: 10px 0px; */
+  /* background: #eee;
+  color: #333; */
+  position: relative;
+  overflow: hidden;
 }
 
 .header__container {
@@ -117,7 +121,7 @@ body {
   align-items: center;
   background-color: #bf9cd8;
   width: 100%;
-  position: relative;
+  /* position: relative; */
 
   display: flex;
   flex-direction: column;
@@ -259,11 +263,11 @@ body {
   height: 50px;
   max-width: 300px;
   margin: 0 auto;
-  padding: 16px;
+  padding: 18px;
   justify-content: center;
   border-radius: 25px;
   position: absolute;
-  top: 50%;
+  top: 30%;
   left: 10px;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
@@ -307,6 +311,7 @@ body {
   margin-bottom: 4px;
   color: white;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  padding: 19px 0;
 }
 
 .detail-title-name h2 {
@@ -711,17 +716,19 @@ body {
 }
 
 .grid-photo {
-  width: 100%;
-  /* height: auto; */
-  aspect-ratio: 1;
-  object-fit: contain;
-  /* border-radius: 10px; */
-  /* overflow: hidden; */
+  /* width: 100%; */
+  /* aspect-ratio: 1; */
+  /* object-fit: contain; */
   cursor: pointer;
   transition: 0.3s;
-  display: block;
+  /* display: block; */
   margin: 0 auto 5px auto;
-  /* margin-right: auto; */
+
+  flex: 1 1 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* position: relative; */
 }
 
 .grid-photo img {
@@ -748,7 +755,7 @@ body {
   margin: auto;
   display: block;
   width: 75%;
-  /* max-width: 75%; */
+  max-width: 75%;
 }
 
 @-webkit-keyframes zoom {
@@ -831,6 +838,7 @@ body {
 
   .detail-title-name {
     font-size: 20px;
+    padding: 12px 0;
   }
 
   #detailName {
@@ -840,7 +848,7 @@ body {
 
 @media (max-width: 766px) {
   .back-button {
-    top: 50%;
+    /* top: 50%; */
     left: 5px;
     padding: 10px;
     font-size: 16px;
@@ -862,6 +870,10 @@ body {
 
   .detail-title {
     top: 200px;
+  }
+
+  .detail-title-name {
+    padding: 8px 0;
   }
 }
 
