--- a/docs/styles.css
+++ b/docs/styles.css
@@ -19,6 +19,7 @@ body {
 
 .page {
   flex: 1 1 auto;
+  padding-bottom: 10px;
 }
 
 .wrapper {
@@ -133,7 +134,7 @@ body {
   top: 0;
   left: 50%;
   transform: translateX(-50%);
-  border-radius: 0 0 5px 5px;
+  /* border-radius: 0 0 5px 5px; */
   text-align: center;
   margin: 0 auto;
   padding: 10px 0;
