--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1196,7 +1196,7 @@ body {
 
 @media (max-width: 992px) {
   .detail-page {
-    margin-top: 80px;
+    margin-top: 63px;
   }
 
   .header__container {
@@ -1248,7 +1248,8 @@ body {
   }
 
   .detail-title-name {
-    padding: 8px 0;
+    padding: 3px 0;
+    margin-bottom: 0;
   }
 
   .form-content {
