--- a/docs/styles.css
+++ b/docs/styles.css
@@ -10,12 +10,18 @@
   }
 }
 
+html {
+  overflow: hidden;
+  height: 100%;
+}
+
 body {
+  overflow: auto;
+  height: 100%;
+  overscroll-behavior: none;
   background-color: #93c4cf;
   background-color: transparent;
   color: #333;
-  overflow-x: hidden;
-  overscroll-behavior-y: none;
 }
 
 .page {
